# lark_ai_challenge_openclaw_longterm_memory

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  WORKFLOW.md  pyproject.toml
benchmarks/: copilot_candidate_cases.json  copilot_conflict_cases.json  copilot_heartbeat_cases.json  copilot_layer_cases.json  copilot_prefetch_cases.json  copilot_real_feishu_cases.json  copilot_realistic_recall_challenge.json  copilot_recall_cases.json  day1_cases.json  day1_teammate_cases.json  day5_ingestion_cases.json  day7_anti_interference.json  dialogue_memory_cases.json
data/: conflict_cases_50.json  day1_teammate_noise_messages.txt  noise_chat_samples_200.json  simple_memory_cases_70.json
datasets/: enterprise_dialogues.jsonl  feishu_demo_conversation.md  noise_messages.txt
deploy/: copilot-admin.env.example  copilot-admin.nginx.example  copilot-admin.production-evidence.example.json  copilot-admin.service.example  workspace-ingestion.production-evidence.example.json  workspace-ingestion.schedule.example.json
docs/: README.md  TODO.md  benchmark-report.md  bitable-ledger-views.md  competition-master-execution-plan.md  copilot-product-question-log.md  day1-execution-plan.md  day1-handoff.md  day1-teammate-completion.md  day2-demo-inputs.md  day2-handoff.md  day2-implementation-plan.md  day2-qa-notes.md  day3-handoff.md  day4-handoff.md  day5-handoff.md  day5-ingestion-benchmark-report.md  day6-handoff.md  day6-hermes-feishu-gateway-notes.md  day6-scope-adjustment.md  day7-handoff.md  demo-runbook.md  feishu-memory-copilot-implementation-plan.md  (+9 more)
tests/: __init__.py  (+107 more)
(+335 files in other folders)
