[project]
name = "feishu-memory-engine"
version = "0.1.0"
description = "OpenClaw-native Feishu Memory Copilot for the Feishu AI challenge"
requires-python = ">=3.9"
dependencies = [
    "cognee==0.1.20",
    "httpx==0.27.2",
]

[project.scripts]
memory = "memory_engine.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["memory_engine*"]
