[project]
name = "feishu-memory-engine"
version = "0.1.0"
description = "OpenClaw-native Feishu Memory Copilot for the Feishu AI challenge"
requires-python = ">=3.9"
dependencies = [
    "cognee==0.1.20",
    "httpx==0.27.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.0",
    "coverage>=7.0",
    "pip-audit>=2.7",
    "pip-licenses>=4.0",
    "build>=1.0",
]

[project.scripts]
memory = "memory_engine.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["memory_engine*"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.coverage.run]
source = ["memory_engine"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
